Fix black background and spacing for album text

--- a/assets/css/music.css
+++ b/assets/css/music.css
@@ -84,14 +84,19 @@
 
 .music-card__album-text {
 	background-color: #000;
-	border-radius: 0.4em;
-	margin: 0 1em;
+	box-sizing: border-box;
+	padding: 1em;
+}
+
+@media (min-width: 576px) {
+	.music-card__album-text {
+		border-radius: 0.4em;
+		margin: 0 1em;
+	}
 }
 
 .music-card__album-text-container {
-	background-color: #000; /* Will need to remove this for larger screens when it's side-by-side */
 	display: block;
-	padding-top: 1.5em;
 	position: relative;
 	width: 100%;
 }
@@ -102,6 +107,7 @@
     -webkit-box-flex: 0;
             flex: 0 0 75%;
     max-width: 75%;
+		/* padding-top: 0; */
   }
 }
 
